--- a/app-config.yml
+++ b/app-config.yml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: wil-playground
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: wil-playground
@@ -20,7 +20,7 @@ spec:
 
 ---
 apiVersion: v1
-kind: Service
+kind: NodePort
 metadata:
   name: wil-playground
 spec:
@@ -31,3 +31,4 @@ spec:
     protocol: TCP
     port: 80
     targetPort: 8888
+    nodePort: 8888
