--- a/app-config.yml
+++ b/app-config.yml
@@ -20,10 +20,11 @@ spec:
 
 ---
 apiVersion: v1
-kind: NodePort
+kind: Service
 metadata:
   name: wil-playground
 spec:
+  type: NodePort
   selector:
     app: wil-playground
   ports:
